--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
-  build-backend:
+ ## build-backend:
     docker:
       - image: circleci/node:13.8.0
     steps:
@@ -64,8 +64,8 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
-
-  test-frontend:
+          
+  ## test-frontend:
     docker:
       # Docker image here
     steps:
@@ -73,7 +73,7 @@ jobs:
       # Restore from cache
       # Your job code here
                 
-  test-backend:
+  ## test-backend:
     docker:
       # Docker image here
     steps:
@@ -81,7 +81,7 @@ jobs:
       # Restore from cache
       # Your job code here
             
-  scan-frontend:
+  ## scan-frontend:
     docker:
       # Docker image here
     steps:
@@ -89,7 +89,7 @@ jobs:
       # Restore from cache
       # Your job code here
 
-  scan-backend:
+  ## scan-backend:
     docker:
       # Docker image here
     steps:
@@ -97,7 +97,7 @@ jobs:
       # Restore from cache
       # Your job code here
 
-  deploy-infrastructure:
+ ##  deploy-infrastructure:
     docker:
       # Docker image here that supports AWS CLI
     steps:
@@ -131,7 +131,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt
       # Here's where you will add some code to rollback on failure      
 
-  configure-infrastructure:
+  ## configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
     steps:
@@ -150,7 +150,7 @@ jobs:
             exit 1
       # Here's where you will add some code to rollback on failure      
 
-  run-migrations:
+  ## run-migrations:
     docker:
       # Docker image here that supports NodeJS
     steps:
@@ -167,7 +167,7 @@ jobs:
             exit 1
      # Here's where you will add some code to rollback on failure      
 
-  deploy-frontend:
+  ## deploy-frontend:
     docker:
       # Docker image here that supports AWS CLI
     steps:
@@ -188,7 +188,7 @@ jobs:
             # your code here
       # Here's where you will add some code to rollback on failure      
                     
-  deploy-backend:
+  ## deploy-backend:
     docker:
       # Docker image here that supports Ansible
     steps:
@@ -205,7 +205,7 @@ jobs:
             # your code here
       # Here's where you will add some code to rollback on failure  
 
-  smoke-test:
+  ## smoke-test:
     docker:
       # Lightweight Docker image 
     steps:
@@ -228,7 +228,7 @@ jobs:
             # your code here
       # Here's where you will add some code to rollback on failure  
 
-  cloudfront-update:
+  ## cloudfront-update:
     docker:
       # Docker image here that supports AWS CLI
     steps:
@@ -243,7 +243,7 @@ jobs:
             # your code here
       # Here's where you will add some code to rollback on failure  
 
-cleanup:
+## cleanup:
     docker:
       # Docker image here
     steps:
@@ -267,31 +267,31 @@ workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend
-      - test-frontend:
+      - ## build-backend
+      - ## test-frontend:
           requires: [build-frontend]
-      - test-backend:
+      - ## test-backend:
           requires: [build-backend]
-      - scan-backend:
+      - ## scan-backend:
           requires: [build-backend]
-      - scan-frontend:
+      - ## scan-frontend:
           requires: [build-frontend]
-      - deploy-infrastructure:
+      - ## deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
               only: [test-feature-branch]
-      - configure-infrastructure:
+      - ## configure-infrastructure:
           requires: [deploy-infrastructure]
-      - run-migrations:
+      - ## run-migrations:
           requires: [configure-infrastructure]
-      - deploy-frontend:
+      - ## deploy-frontend:
           requires: [run-migrations]
-      - deploy-backend:
+      - ## deploy-backend:
           requires: [run-migrations]
-      - smoke-test:
+      - ## smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
+      - ## cloudfront-update:
           requires: [smoke-test]
-      - cleanup:
+      - ## cleanup:
           requires: [cloudfront-update]
